tests/fixtures/invalid/pow_int_bytes_bytes.py
# Cannot call pow() with Int, Bytes, Bytes
x = pow(1, b"hello", b"hello")
